--- a/success.html
+++ b/success.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+r<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -52,8 +52,8 @@
     <div class="success-message">
         <h1>Successfully completed VTU Interns Exam!</h1>
         <p>Congratulations on your achievement! You have successfully completed the VTU Interns Exam.</p>
-        <p>Result will be released on <strong>04 Feb 2025 @ 10AM</strong></p>
-        <a href="https://sites.google.com/view/vtu-student-profile/chaithra-c/profile" class="button">Your Profile</a>
+        <p>Check your result <strong>Now</strong></p>
+        <a href="https://sites.google.com/view/vtu-student-profile/chaithra-c/profile" class="button">All The Best</a>
     </div>
 
 </body>
