--- a/success.html
+++ b/success.html
@@ -52,7 +52,7 @@ r<!DOCTYPE html>
     <div class="success-message">
         <h1>Successfully completed VTU Interns Exam!</h1>
         <p>Congratulations on your achievement! You have successfully completed the VTU Interns Exam.</p>
-        <p>Check your result <strong>Now</strong></p>
+        <p><strong>Check your Result now</strong></p>
         <a href="https://sites.google.com/view/vtu-student-profile/chaithra-c/profile" class="button">All The Best</a>
     </div>
 
